# format-aliases

./: Cargo.toml  LICENSE  README.md  TODO.md  devenv.nix  flake.nix
src/: main.rs
