[package]
name = "format-aliases"
version = "0.1.0"
edition = "2021"
authors = ["Adam Gaia"]
description = "Print active shell aliases with nice formatting"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/adam-gaia/format-aliases"
repository = "https://github.com/adam-gaia/format-aliases"
homepage = "https://github.com/adam-gaia/format-aliases"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
colorized = "1.0.0"
directories = "5.0.0"
env_logger = "0.10.0"
indoc = "2.0.1"
log = "0.4.17"
no_color = "0.1.0"
nom = "7.1.3"
toml = "0.8.0"
